--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             { name: "Naver", url: "https://www.naver.com" },
             { name: "ChatGPT", url: "https://chatgpt.com" },
             { name: "Gemini", url: "https://gemini.google.com" },
-            { name: "Morning News", url: "http://glamboy77.duckdns.org/index.html", icon: "https://ssl.gstatic.com/images/branding/product/1x/news_96dp.png" },
+            { name: "Morning News", url: "https://glamboy77-tech.github.io/morningnews/", icon: "https://ssl.gstatic.com/images/branding/product/1x/news_96dp.png" },
             { name: "Canva", url: "https://www.canva.com" },
             { name: "Sheets", url: "https://docs.google.com/spreadsheets", icon: "https://ssl.gstatic.com/docs/doclist/images/mediatype/icon_1_spreadsheet_x128.png" },
             { name: "네이버 지도", url: "https://map.naver.com", icon: "https://map.naver.com/v5/assets/img/favicon/favicon-96x96.png" },
@@ -515,5 +515,6 @@
         renderShortcuts();
     </script>
 </body>
+
 
 </html>
