아이콘 변경

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             {
                 name: "Trend Hub",
                 url: "homepage/trend_hub.html",
-                icon: "https://cdn-icons-png.flaticon.com/512/3588/3588592.png"
+                icon: "https://cdn-icons-png.flaticon.com/512/785/785116.png"
             },
             { name: "Google", url: "https://www.google.com" },
             { name: "Naver", url: "https://www.naver.com" },
