--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
             { name: "Spotify", url: "https://www.spotify.com" },
             { name: "YouTube", url: "https://www.youtube.com" },
             { name: "Telegram", url: "https://web.telegram.org" },
+            { name: "GitHub", url: "https://github.com" },
             { name: "Keep", url: "https://keep.google.com", icon: "https://ssl.gstatic.com/images/branding/product/2x/keep_2020q4_48dp.png" },
             { name: "Drive", url: "https://drive.google.com", icon: "https://ssl.gstatic.com/images/branding/product/2x/drive_2020q4_48dp.png" },
             { name: "Photos", url: "https://photos.google.com", icon: "https://www.gstatic.com/images/branding/product/1x/photos_96dp.png" },
