--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
             { name: "ChatGPT", url: "https://chatgpt.com" },
             { name: "Gemini", url: "https://gemini.google.com" },
             { name: "Morning News", url: "https://glamboy77-tech.github.io/morningnews/", icon: "https://ssl.gstatic.com/images/branding/product/1x/news_96dp.png" },
+            { name: "Market Signal", url: "http://20.41.108.211/market_signal_app/index.html", icon: "https://cdn-icons-png.flaticon.com/512/2936/2936886.png" },
             { name: "Canva", url: "https://www.canva.com" },
             { name: "Sheets", url: "https://docs.google.com/spreadsheets", icon: "https://ssl.gstatic.com/docs/doclist/images/mediatype/icon_1_spreadsheet_x128.png" },
             { name: "네이버 지도", url: "https://map.naver.com", icon: "https://map.naver.com/v5/assets/img/favicon/favicon-96x96.png" },
