--- a/index.html
+++ b/index.html
@@ -473,7 +473,12 @@
             { name: "Naver", url: "https://www.naver.com" },
             { name: "ChatGPT", url: "https://chatgpt.com" },
             { name: "Gemini", url: "https://gemini.google.com" },
-            { name: "RecipeBook", url: "https://glamboy77-tech.github.io/RecipeBook/" },
+            {
+                name: "RecipeBook",
+                url: "https://glamboy77-tech.github.io/RecipeBook/",
+                // Prefer the PWA app icon over generic favicon services
+                icon: "https://glamboy77-tech.github.io/RecipeBook/pwa-192x192.png"
+            },
             { name: "Morning News", url: "https://glamboy77-tech.github.io/morningnews/", icon: "https://ssl.gstatic.com/images/branding/product/1x/news_96dp.png" },
             { name: "Canva", url: "https://www.canva.com" },
             { name: "Sheets", url: "https://docs.google.com/spreadsheets", icon: "https://ssl.gstatic.com/docs/doclist/images/mediatype/icon_1_spreadsheet_x128.png" },
