--- a/index.html
+++ b/index.html
@@ -491,13 +491,16 @@
             { name: "Keep", url: "https://keep.google.com", icon: "https://ssl.gstatic.com/images/branding/product/2x/keep_2020q4_48dp.png" },
             { name: "Drive", url: "https://drive.google.com", icon: "https://ssl.gstatic.com/images/branding/product/2x/drive_2020q4_48dp.png" },
             { name: "Photos", url: "https://photos.google.com", icon: "https://www.gstatic.com/images/branding/product/1x/photos_96dp.png" },
-            { name: "Netflix", url: "https://www.netflix.com" }
+            { name: "Netflix", url: "https://www.netflix.com" },
+            { 
+                name: "AutoBot Daily Viewer", 
+                url: "http://34.50.53.204:8000/index.html",
+                icon: "https://cdn-icons-png.flaticon.com/512/2838/2838694.png"
+            }
         ];
 
         function renderShortcuts() {
             const grid = document.getElementById('shortcuts');
-
-            // Sort shortcuts based on click count from localStorage
             shortcuts.sort((a, b) => {
                 const countA = parseInt(localStorage.getItem('shortcut_clicks_' + a.name) || '0', 10);
                 const countB = parseInt(localStorage.getItem('shortcut_clicks_' + b.name) || '0', 10);
