--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             { name: "Netflix", url: "https://www.netflix.com" },
             { 
                 name: "AutoBot Daily Viewer", 
-                url: "http://34.50.53.204:8000/index.html",
+                url: "http://34.50.53.204/journal/index.html",
                 icon: "https://cdn-icons-png.flaticon.com/512/4333/4333339.png"
             }
         ];
