--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             },
             { name: "Google", url: "https://www.google.com" },
             { name: "Naver", url: "https://www.naver.com" },
-            { name: "ChatGPT", url: "https://chatgpt.com" },
+            { name: "ChatGPT", url: "https://chatgpt.com", icon: "assets/chatgpt.svg" },
             { name: "Gemini", url: "https://gemini.google.com" },
             {
                 name: "RecipeBook",
