바로가기 수정

--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@
             { name: "Photos", url: "https://photos.google.com", icon: "https://www.gstatic.com/images/branding/product/1x/photos_96dp.png" },
             { name: "Netflix", url: "https://www.netflix.com" },
             { 
-                name: "AutoBot Daily Viewer", 
-                url: "http://34.64.81.94/journal/index.html",
+                name: "Google Apps", 
+                url: "https://aistudio.google.com/apps",
                 icon: "https://cdn-icons-png.flaticon.com/512/4333/4333339.png"
             }
         ];
