바로가기 추가

--- a/index.html
+++ b/index.html
@@ -496,6 +496,11 @@
                 name: "Google Apps", 
                 url: "https://aistudio.google.com/apps",
                 icon: "https://cdn-icons-png.flaticon.com/512/4333/4333339.png"
+            },
+            { 
+                name: "Gym Routine Tracker", 
+                url: "https://gym-routine-tracker-783885185452.us-west1.run.app/",
+                icon: "https://www.google.com/s2/favicons?domain=gym-routine-tracker-783885185452.us-west1.run.app&sz=128"
             }
         ];
 
